--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"react": "^16.8.6",
 		"react-chartjs-2": "^2.7.6",
 		"react-dom": "^16.8.6",
-		"react-scripts": "2.1.8"
+		"react-scripts": "2.1.8",
+		"use-debounce": "^1.1.1"
 	},
 	"devDependencies": {
 		"prettier": "^1.16.4"
