--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"react-chartjs-2": "^2.7.6",
 		"react-dom": "^16.8.6",
 		"react-scripts": "2.1.8",
+		"typescript": "^3.4.2",
 		"use-debounce": "^1.1.1"
 	},
 	"devDependencies": {
